--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,7 @@
 == README
 
+This app currently uses Ruby 2.2.1
+
 This README would normally document whatever steps are necessary to get the
 application up and running.
 
